<resources>
    <string name="app_name">小象劇場</string>
    <string name="bottom_name1">首頁</string>
    <string name="bottom_name2">劇場</string>
    <string name="bottom_name3">廣場</string>
    <string name="bottom_name4">公眾號</string>
    <string name="bottom_name5">我的</string>
    <string name="confirm">確定</string>
    <string name="cancel">取消</string>
    <string name="done">完成</string>
    <string name="setting_base">基本設置</string>
    <string name="setting_other">其他設置</string>
    <string name="setting_top">顯示置頂文章</string>
    <string name="setting_toptip">開啟後首頁會顯示置頂文章</string>
    <string name="choose_theme_color">主題顏色</string>
    <string name="choose_theme_color_summary">設置App的主題顏色</string>
    <string name="setting_about">關於</string>
    <string name="setting_project">開源項目</string>
    <string name="setting_version">版本</string>
    <string name="setting_exit">退出</string>
    <string name="clear_cache">清除緩存</string>
    <string name="setting_mode">列表動畫</string>
    <string name="setting_modetip">無</string>
    <string name="copyright">版權聲明</string>
    <string name="copyright_tip">本App使用的Api僅供於大家學習交流</string>
    <string name="copyright_summary">僅作個人及非商業用途</string>
    <string name="author">作者</string>
    <string name="author_name">一個練習時長兩年半的安卓開發者→_→</string>
    <string name="project_address">項目源碼</string>
    <string name="github_url">https://github.com/hegaojian/JetpackMvvm</string>
    <string name="open_project">開源項目</string>
    <string name="open_project_tips">項目中用到的開源庫</string>
    <string name="error_occurred">不好意思App翻車了。\n請拿已復製好的錯誤日誌去找作者</string>
    <string name="video_finish_text">已完結共%1$d集</string>
    <string name="video_update_text">更新中共%1$d集</string>
    <string name="video_watch_text">%1$d人正在看</string>
    <string name="me_setting_text">系統設置</string>
    <string name="me_about_text">關於我們</string>
    <string name="me_cost_text">消費記錄</string>
    <string name="me_recharge_text">充值記錄</string>
    <string name="me_chat_text">聯系我們</string>
    <string name="me_cur_gold_text">當前K幣 : </string>
    <string name="me_my_gold_text">我的K幣</string>
    <string name="me_click_login_text">點擊登陸~</string>
    <string name="dkplayer_replay">重新播放</string>
    <string name="dkplayer_lock_tip">請先解鎖屏幕！</string>
    <string name="dkplayer_unlocked">已解鎖</string>
    <string name="dkplayer_locked">已鎖定</string>
    <string name="dkplayer_error_message">出了點小問題，請稍後重試</string>
    <string name="dkplayer_retry"> 重    試 </string>
    <string name="dkplayer_continue_play">繼續播放</string>
    <string name="dkplayer_wifi_tip">您正在使用移動網絡，繼續播放將消耗流量</string>
    <string name="episodes_all">共%d集</string>
    <string name="episodes_cur">第%d集</string>
    <string name="change_next">換一個</string>
    <string name="continue_play">繼續觀看</string>
    <string name="add_to">追</string>
    <string name="finish">已完結</string>
    <string name="cur_add">%d人在追</string>
    <string name="click_login">點擊登陸</string>
    <string name="setting">系統設置</string>
    <string name="contact">聯系我們</string>
    <string name="feedback">幫助與反饋</string>
    <string name="about">關於我們</string>
    <string name="episodes_update">更新至%d集</string>
    <string name="episodes_cur_watch">觀看至%d集</string>
    <string name="text_me_like_videos">您正在看的視頻</string>
    <string name="text_exit">再按一次退出程序</string>
    <string name="text_connect">有網了~</string>
    <string name="text_disconnect">我怎麽斷網了!</string>
    <string name="text_me_item_episode">您看到了第%d集</string>
    <string name="text_me_recharge_give_gold">贈幣</string>
    <string name="text_me_give_money">多送%d元</string>
    <string name="text_video_home_cur_episode" type="id">第%d集</string>
    <string name="text_video_home_all_episode" type="id">共%d集</string>
    <string name="item_cost_text">消费K币</string>
    <string name="item_cost_time">时间</string>
    <string name="item_cost_left">剩余K币</string>
    <string name="item_cost_buy">购买视频</string>
    <string name="item_recharge_text">充值</string>
    <string name="item_recharge_buy">购买K币</string>
    <string name="item_recharge_give">赠送K币</string>
    <string name="item_recharge_left">剩余K币</string>
    <string name="click_bind_phome_text">点击绑定手机号</string>
    <string name="bind_text">绑定号码</string>
    <string name="editor_psw_text">修改密码</string>
    <string name="bind_phone_faild">获取号码失败</string>
    <string name="editor_psw_nickname_text">修改昵称密码</string>
    <string name="nick_name_text">昵称</string>
    <string name="safe_notice_text">为确保账户安全，请填写昵称密码</string>
    <string name="psw_text">密码</string>
    <string name="new_psw_text">确认密码</string>
    <string name="input_nickname_text">请填写昵称</string>
    <string name="input_psw_text">请填写密码</string>
    <string name="input_psw_sure_text">请填写确认密码</string>
    <string name="psw_less_text">密码最少6位</string>
    <string name="psw_not_same_text">密码不一致</string>
</resources>