<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.smallplay.playlet.viewmodel.state.MeViewModel" />

        <variable
            name="click"
            type="com.smallplay.playlet.ui.fragment.me.MeFragment.ProxyClick" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/me_swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/me_linear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:onClick="@{()->click.login()}"
                        android:paddingTop="30dp"
                        android:paddingBottom="30dp">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="16dp"
                            android:src="@drawable/ic_account"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            bind:circleImageUrl="@{vm.imageUrl}" />

                        <TextView
                            android:id="@+id/me_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:text="@{vm.name}"
                            android:textColor="@color/white"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@+id/me_info"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView"
                            app:layout_constraintTop_toTopOf="@+id/imageView"
                            app:layout_constraintVertical_chainStyle="packed"
                            tools:text="点击登陆" />

                        <TextView
                            android:id="@+id/me_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            android:text="@{vm.info}"
                            android:textColor="@color/white"
                            android:textSize="12dp"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView"
                            app:layout_constraintStart_toEndOf="@+id/imageView"
                            app:layout_constraintTop_toBottomOf="@+id/me_name"
                            tools:text="id：--　--" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="-16dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:orientation="vertical">
                            <LinearLayout
                                android:id="@+id/item_recharge_layout"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:orientation="vertical">
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">
                                    <TextView
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:textColor="@color/colorBlack333"
                                        android:layout_marginLeft="10dp"
                                        android:textStyle="bold"
                                        android:text="会员充值"/>

                                    <ImageView
                                        android:id="@+id/item_me_recharge_icon"
                                        android:layout_width="20dp"
                                        android:layout_height="20dp"
                                        android:background="@color/windowBackground"
                                        android:scaleType="centerCrop"
                                        android:src="@mipmap/icon_gold" />

                                    <TextView
                                        android:id="@+id/me_gold"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginRight="20dp"
                                        android:text="@{String.valueOf(vm.gold)}"
                                        android:textColor="@color/colorPrimary"
                                        android:textSize="15dp"
                                        android:textStyle="bold"
                                        tools:text="1000000" />
                                </LinearLayout>

                                <androidx.recyclerview.widget.RecyclerView
                                    android:id="@+id/recycle_recharge_vip"
                                    android:layout_width="match_parent"
                                    android:layout_height="70dp"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp"
                                    android:scrollbars="none"/>

                            </LinearLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="8dp"
                                android:background="@color/windowBackground" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="180dp"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textStyle="bold"
                                    android:textColor="@color/colorBlack333"
                                    android:layout_marginLeft="10dp"
                                    android:text="@string/text_me_like_videos">

                                </TextView>
                                <androidx.recyclerview.widget.RecyclerView
                                    android:id="@+id/recycle_like_video"
                                    android:layout_width="match_parent"
                                    android:layout_height="170dp"
                                    android:layout_marginStart="6dp"
                                    android:layout_margin="6dp"
                                    android:scrollbars="none"/>
                            </LinearLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="8dp"
                                android:background="@color/windowBackground" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="?attr/selectableItemBackground"
                                android:gravity="center_vertical"
                                android:onClick="@{()->click.chat()}"
                                android:orientation="horizontal"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp">

                                <ImageView
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_marginRight="16dp"
                                    android:src="@mipmap/ic_yuwolianxi" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/me_chat_text"
                                    android:textColor="@color/colorBlack333"
                                    android:textSize="14dp"
                                    android:textStyle="bold" />

                                <ImageView
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:src="@drawable/ic_right" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="?attr/selectableItemBackground"
                                android:gravity="center_vertical"
                                android:onClick="@{()->click.setting()}"
                                android:orientation="horizontal"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp">

                                <ImageView
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_marginRight="16dp"
                                    android:src="@drawable/shezhi" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/me_setting_text"
                                    android:textColor="@color/colorBlack333"
                                    android:textSize="14dp"
                                    android:textStyle="bold" />

                                <ImageView
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:src="@drawable/ic_right" />
                            </LinearLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>